# wgpu-imm

./: Cargo.toml  README.md  shader_old.wgsl
assets/: dog.glb  monkey1.glb  ship.glb  test sphere metallic.glb
src/: app.rs  camera.rs  contexts.rs  environment_map.rs  frame_buffer.rs  frame_buffer.wgsl  game.rs  immediate_renderer.rs  importer.rs  light.rs  lights.rs  main.rs  mesh.rs  pipeline.rs  preloaded_renderer.rs  quad_renderer.rs  shader.wgsl  shader_color.wgsl  shader_old.wgsl  shader_uv.wgsl  spec_tex.rs  sprite.rs  texture.rs  textures.rs  vertex.rs  virtual_gpu.rs  virtual_render_pass.rs  wgpu_setup.rs
