[package]
name = "wgpu-imm"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
pollster = "0.4.0"
winit = "0.30.5"
wgpu = "23.0.1"
bytemuck = { version = "1.20.0", features = [ "derive" ] }
fastrand = "2.2.0"
glam = { version = "0.29.2", features = [ "bytemuck" ] }
gltf = "1.4.1"
image = "0.25.5"